copy_code_and_intro_for_isogeny_still_to_do

--- a/main_project.ipynb
+++ b/main_project.ipynb
@@ -318,8 +318,106 @@
     "\n",
     "    Jak widzimy krzywa eliptyczna przyjęła postać pewnych punktów, a prosta to tak naprawdę prost**e**, którę przechodzą przez właśnie trzy punkty. Całość można porównać do poniższego rysunku torusa, gdzie prosta to tak naprawdę krzywa zakręcająca wokół niego ([źródło obrazu](https://mathematica.stackexchange.com/questions/115414/curve-wound-on-torus?noredirect=1)):\n",
     "\n",
-    "    ![](images/torus.png)"
+    "    ![](images/torus.png)\n",
+    "\n",
+    "* Skoro nasza krzywa to teraz zbiór określonych punktów to mnożenie przez skalary punktów to poruszanie się od punktu do punktu, które to należą do naszego ciała. Poniżej przykład pewnego mnożenia:\n",
+    "\n",
+    "    ![](images/multi_eliptic_field.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PRZERWA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PRZERWA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Protokoły kryptograficzne wykorzystujące izogenie\n",
+    "\n",
+    "Do tej pory zaproponowanych zostało kilka protokołów korzystających z izogenii. Większość z nich implementuje algorytm wymiany klucza Diffie-Hellman, zastępując tradycyjne operacje na liczbach pierwszych, które teoretycznie są możliwe do złamania za pomocą algorytmu Shore’a, operacjami opierającymi się na izogeniach między krzywymi eliptycznymi. Zaproponowany został również jeden protokół podpisu cyfrowego - SQISign, który korzysta z izogenii. W tej pracy zagłębimy się w działanie protokołów SIDH, CSIDH oraz wspomnianego wcześniej SQISign.\n",
+    "\n",
+    "### 3.1. SIDH - Supersingular Isogeny Diffie-Hellman**\n",
+    "\n",
+    ">**Wstęp**\n",
+    "\n",
+    "Protokół SIDH został oryginalnie opracowany w 2011 roku przez matematyków Luce de Feo, Davida Jao i Jerome Pluta. Następnie wykorzystano go oraz rozwinięto by stworzyć system kryptograficzny SIKE - Supersingular Isogeny Key Encapsulation, który był rozwijany przez wielu naukowców pochodzących z firm takich jak Microsoft, Amazon, Texas Instruments oraz uniwersytetów z Francji oraz Stanów Zjednoczonych. W swojej rozwiniętej wersji trafił on do konkursu organizacji NIST, na najlepszy postkwantowy algorytm szyfrujący gdzie dotarł do czwartej rundy i wydawał się najlepszą propozycją, która korzysta z izogenii - niestety jednak został on złamany - o czym można przeczytać dalej w tej pracy i obecnie nie odnaleziono żadnych modyfikacji, które wyeliminowałyby znalezione podatności nie zmniejszając przy tym diametralnie wydajności algorytmu.\n",
+    "\n",
+    ">**Schemat działania**\n",
+    "\n",
+    "Podobnie jak oryginalny algorytm Diffiego-Hellmana SIDH strony godzą się na wspólne wartości - w tym przypadku jest to liczba pierwsza p postaci: $p=l_{A}\\ ^{e_{A}}\\cdot l_{B}\\ ^{e_{B}}\\cdot t \\pm 1$, gdzie $l_{A}=2$, $l_{B}=3$, $e_{A}$ i $e_{B}$  są dobrane tak by $l_{A}\\ ^{e_{A}} \\approx l_{B}\\ ^{e_{B}}$, a $t$ to mała liczba całkowita dobrana tak aby p była liczbą pierwszą, krzywa eliptyczna E nad ciałem Kp^2, oraz cztery ustalone punkty z krzywej $E: P_{A}, Q_{A}, P_{B}, Q_{B}$, których rzędy muszą wynosić odpowiednio dla $P_{A}$ i $Q_{A}$: $l_{A}\\ ^{e_{A}}$ oraz dla $P_{B}$ i $Q_{B}$: $l_{B}\\ ^{e_{B}}$. Następnie strony obliczają kombinację liniową ze znanych punktów, strona A: $R_{A} = mP_{A} + nQ_{A}$ , strona B: $R_{B} = kP_{B} + lQ_{B}$ liczby $m,n,k,l$ są losowo wybierane przez strony. Działanie dodawania punktów na krzywej eliptycznej jest zdefiniowane tak, że w jego wyniku na pewno otrzymamy punkt leżący na tej krzywej, z tego powodu otrzymane $R_{A}$ oraz $R_{B}$ należą do krzywej $E$, oraz grupy przez nie generowane są podgrupami grupy tworzonej przez $E$ oraz operacji dodawania punktów na krzywych. Istnieje twierdzenie mówiące, że jeśli grupa generowana przez $R$ jest podgrupą grupy z $E$, to istnieje unikalna izogenia o jądrze generowanym przez $R$. Otrzymujemy ją korzystając ze wzorów Velu, tak każda ze stroną otrzymuje swoją tajną izogenię odpowiednio $f_{A}: E\\rightarrow E_{A}$ oraz $f_{B}: E\\rightarrow E_{B}$ - co ważne strukturą algebraiczną, w której poruszamy się za pomocą obliczanych izogenii nie jest grupa a graf, którego wierzchołkami są krzywe eliptyczne - w tym nasza startowa krzywa $E$ oraz obliczone krzywe $E_{A}$ oraz $E_{B}$, a krawędzie stanowią izogenie między nimi, jest to tak zwana klasa izogenii. Odpowiednie ustalenie punktów $P_{A}, Q_{A}, P_{B}, Q_{B}$  gwarantuje, że izogenie otrzymane przez obie strony będą różne. Następnym krokiem jest obliczenie wartości izogenii dla punktów $P_{A}, Q_{A}$ przez stronę $B$ i $P_{B}$, $Q_{B}$ przez stronę $A$, a następnie przesłanie ich oraz $E_{A}$ i $E_{B}$, trójki te pełnią rolę klucza publicznego, przez kanał komunikacyjny do drugiej strony. W tym momencie strona $A$ posiada: $f_{B}(P_{A}), f_{B}(Q_{A})$, a strona $B:\\ f_{A}(P_{B}), f_{S}(Q_{B})$ następnie obliczamy kombinację liniową tych punktów wykorzystując użyte już losowe współczynniki. Strona $A: SA= mf_{B}(P_{A}) + nf_{B}(Q_{A})$, strona $B: SB= kf_{A}(P_{B}) + lf_{A}(Q_{B})$. Ponownie na podstawie przytoczonego wcześniej twierdzenia oraz wzorów Velu tworzymy nowe izogenie: $v_{A}$ o jądrze generowanym przez $S_{A}$ oraz $v_{B}$ o jądrze generowanym przez $S_{B}$, do których każda ze stron wstawia otrzymane odpowiednio $E_{A}$ lub $E_{B}$, aby otrzymać nową krzywą eliptyczną $E_{AB}$, która pełni rolę wspólnego sekretu, czyli tajnego klucza. W praktyce jako klucza używa się niezmiennika j otrzymanej krzywej, którego wartość zależy od jej współczynników.\n",
+    "\n",
+    "![](images/key_start.png)\n",
+    "\n",
+    "*schemat ustalania klucza za pomocą protokołu SIDH - De Feo, Luca; Jao, Plut. \"Towards quantum-resistant cryptosystems from supersingular elliptic curve isogenies\"*\n",
+    "\n",
+    ">**SIKE - Supersingular Isogeny Key Encapsulation**\n",
+    "\n",
+    "Powyższy opis algorytmu ustalania klucza szyfrującego możemy łatwo przekształcić w algorytm kryptografii z kluczem publicznym co autorzy uczynili i nazwali SIKE. Konstrukcja tego mechanizmu ma się do SIDH jak El-Gamal do oryginalnego protokołu Diffiego-Hellmana. Oprócz wartości startowych opisanych powyżej będziemy potrzebować jeszcze rodziny funkcji skrótu $H=\\{H_{k}\\}, k∈K$ gdzie K to skończony zbiór i dla każdego k $H_{k}$ prowadzi z ciała $F_{p^2}$ do przestrzeni wiadomości, wtedy klucz publiczny przyjmuje postać: ($E_{A}$, $f_{A}$($P_{B}$), $f_{A}$($Q_{B}$), k), gdzie krzywa eliptyczna $E_{A}$ oraz wartości izogenii $f_{A}$ dla danych punktów są obliczane tak jak w schemacie działania powyżej, a k to liczba wybrana losowo z K, klucz prywatny stanowi natomiast trójka (m, n, k), m oraz n również jak wyżej, k to liczba wybrana losowo z K, ta sama co w kluczu publicznym. Szyfrowanie wygląda następująco: posiadając klucz publiczny oraz jawną wiadomość obliczamy h jako skrót z niezmiennika j krzywej eliptycznej EAB otrzymanej jak wyżej, następnie xorujemy tą wartość z wiadomością w. $h=H_{k}(j(E_{AB}))$, c=h⊕w. Szyfrogram ma postać: ($E_{B}$, $f_{B}$($P_{A}$), $f_{B}$($Q_{A}$), $c$). Deszyfrowanie: posiadając klucz prywatny oraz szyfrogram również jesteśmy w stanie dotrzeć do krzywej eliptycznej EAB - opisane w schemacie działania - następnie możemy powtórzyć operację  h=$H_{k}$(j(EAB)) oraz odszyfrować wiadomość w ponownie działając operatorem xor: w=h⊕c, w-wiadomość w tekście jawnym.\n",
+    "\n",
+    ">**Jak bardzo bezpieczny jest to algortym?**\n",
+    "\n",
+    "SIDH zanim został złamany mógł pochwalić się zapewnieniem podobnego bezpieczeństwa - 128 bitowe bezpieczeństwo kwantowe oraz 192 bitowe bezpieczeństwo klasyczne - jak inne protokoły w konkursie NIST używając przy tym najkrótszych kluczy: 378 bajtowych kluczy publicznych oraz, w zależności od wersji, mógł korzystać z 512 bitowych, 768 bitowych lub 1024 bitowych kluczy prywatnych. Ponadto działał on bardzo szybko - poszczególne etapy algorytmu ustalania klucza, w zależności od jego długości zajmowały od ok. 25 ms dla klucza 512 bitowego do ok 120 ms dla klucza 1024 bitowego.\n",
+    "\n",
+    ">**Klęska protokołu SIKE** \n",
+    "\n",
+    "30 lipca 2022 roku pojawiła się praca naukowa autorstwa Woutera Castryka oraz Thomasa Decru z uniwersytetu w Leuven. Przedstawili oni algorytm łamiący kryptosystem SIKE. Algorytm ten opiera się na pracach naukowych na temat izogenii opracowanych przez matematyka Ernsta Kaniego w 1997 roku. Przedstawiony przez autorów atak jest możliwy do przeprowadzenia dzięki znajomości punktów na krzywych eliptycznych, oraz obrazu tych punktów dla tajnych izogenii - pełnią one rolę klucza publicznego. W produkcyjnej wersji kryptosystemu do wyliczenia swojej tajnej izogenii strony obliczały kilka pośrednich izogenii, a następnie wykorzystywano ich złożenie  - nie tak jak w schemacie powyżej, gdzie mamy tylko jedną rundę. Wiedząc jak dane punkty zachowują się po przejściu przez izogenie jesteśmy w stanie - jako atakujący odtworzyć kroki poczynione przez jedną ze stron - w praktyce atak celuje w stronę B wymiany, ale nie jest to wymagane, i w konsekwencji uzyskać jej klucz prywatny. Implementacja tego ataku przez autorów jest w stanie złamać wersję protokołu SIKEp182 - 182 bitowa liczba pierwsza - w cztery minuty, SIKEp217 w 6 minut, SIKEp434 - wersję, o której sądzono, że spełnia warunki bezpieczeństwa pierwszego poziomu NIST - w 62 minuty. Wszystkie te próby zostały wykonane na jednordzeniowym komputerze.\n",
+    "\n",
+    "### 3.2. CSIDH - Commutative Supersingular Isogeny Diffie-Hellman\n",
+    "\n",
+    ">**Wstęp**\n",
+    "\n",
+    "Protokół CSIDH zaproponowany przez Woutera Castrycka, Tanje Lange, Chloe Martindale, Lorenza Pannyego i Joosta Renesa naukowców z uniwersytetów z Belgii i Holandii w 2018 roku. Również działa podobnie do klasycznego algorytmu zaproponowanego przez Diffiego i Hellmana jednak w odróżnieniu od systemu SIDH jedyne informacje, z których korzystają strony przy ustalaniu klucza to duża liczba pierwsza p obliczana jako iloczyn małych nieparzystych liczb pierwszych oraz supersingularna krzywa eliptyczna E0 o ustalonym pierścieniu endomorfizmów, nie są potrzebne dodatkowe informacje na przykład o punktach na tych krzywych, jak w protokole SIDH. Cały schemat CSIDH jest oparty na modelu matematycznym opracowanym w 1997 r., korzystającym ze zwykłych (nie supersingularnych) krzywych eliptycznych, który autorzy rozbudowali.\n",
+    "\n",
+    ">**Schemat działania**\n",
+    "\n",
+    "Algorytm zaczyna się od ustalonych wartości: liczby pierwszej p, będącej iloczynem wielu małych nieparzystych liczb pierwszych oraz supersingularnej krzywej eliptycznej $E_{0}$ o ustalonym pierścieniu endomorfizmów. Generacja kluczy prywatnych polega na losowym wybraniu wartości z przedziału od -M do M, gdzie M to pewna liczba związana z rzędem grupy klas ideałów wspomnianego pierścienia. Następnie wybrany wektor $(e_{1}, … , e_{n})$, pełniący rolę klucza prywatnego, służy do skonstruowania klasy ideałów $[g]$ należącej do grupy klas ideałów wybranego pierścienia. Kluczem publicznym jest współczynnik Montgomery’ego krzywej eliptycznej otrzymanej dzięki zastosowaniu akcji $[g]$ na krzywej eliptycznej $E_{0}$. W ten sposób strona $A$ otrzymuje nową krzywą $A’ = [gA]E_{0}$ o współczynniku Montgomery’ego $A$ a strona $B$ krzywą $B’ = [gB]E_{0}$ o współczynniku $B$. Strony zamieniają się wartościami $A$ i $B$ przez kanał komunikacyjny a następnie wyliczają nową krzywą eliptyczną, strona $A: S’=[gA]B’=[gA][gB]E_{0}$, strona $B: S’=[gB]A’=[gB][gA]E_{0}$. Jak widzimy otrzymane krzywe są identyczne a rolę ustalonego tajnego klucza pełni współczynnik Montgomery’ego $S$ krzywej $S’$.\n",
+    "\n",
+    ">**Bezpieczeństwo**\n",
+    "\n",
+    "Protokół CSIDH używa jeszcze krótszych kluczy publicznych bo 64 bajtowych oferując przy tym bezpieczeństwo kwantowe na poziomie 64 bitów, a klasyczne na poziomie 128 bitów. Oferowane rozmiary kluczy prywatnych to 512 bitów, 1024 bity lub 1792 bity a czas trwania algorytmu wynosi około 80 ms.\n",
+    "\n",
+    "### 3.3. SQISign - Short Quaternion and Isogeny Signature\n",
+    "\n",
+    ">**Wstęp**\n",
+    "\n",
+    "Protokół ten został po raz pierwszy przedstawiony w 2020 roku przez grupę naukowców: Luce De Feo, Davida Kohela, Antonina Leroux, Christophera Petit i Benjamina Wesolowskiego z uniwersytetów we Francji, Belgii oraz Anglii. Spośród innych kandydatów na postkwantowy protokół podpisu cyfrowego wyróżnia się on kompaktowością - połączony klucz publiczny oraz podpis SQIsigna jest pięć razy mniejszy niż najbardziej kompaktowa propozycja z trzeciej rundy konkursu NIST - protokół Falcon. Jego autorzy zaproponowali nowe podejście, przenieśli problem znajdowania izogenii między dwiema krzywymi na problem związany z ideałami, rzędami, normami oraz algebrą kwaternionów. Problemy te są równoważne, jedynie poszczególne etapy zostały opisane za pomocą innych struktur matematycznych. Elementem umożliwiającym translację ze świata krzywych do świata kwaternionów jest pierścień endomorfizmów krzywej, a związek ten nazywa się zgodnością Deuringa (ang. Deuring Correspondence). Skąd takie podejście? Okazuje się, że problem postawiony w ten sposób jest prostszy do rozwiązania, ponadto został on rozwiązany i to za pomocą wydajnego algorytmu działającego w czasie wielomianowym.Algorytm ten nazywa się KLPT i został  opracowany w 2014 roku. Autorzy SQISigna rozwinęli go.\n",
+    "\n",
+    ">**Schemat działania**\n",
+    "\n",
+    "Parametry startowe: losowa liczba pierwsza p, supersingularna ustalona krzywa eliptyczna $E_{0}$ nad ciałem $F_{p^2}$ ze znanym pierścieniem endomorfizmów $O_{0}$. Generacja klucza: wybieramy losowo pewną izogenię $τ$ prowadzącą z $E_{0}$ w $E_{A}$, $τ: E_{0}\\rightarrow E_{A}$. Kluczem publicznym jest krzywa eliptyczna $E_{0}$, a kluczem prywatnym izogenia $τ$. Dowód z wiedzą zerową w tym protokole przebiega następująco: strona udowadniająca generuje losową izogenie $ψ: E_{0}\\rightarrow E_{1}$ i wysyła krzywą $E_{1}$ do strony weryfikującej, która konstruuje kolejną izogenię $φ: E_{1}\\rightarrow E_{2}$  i odsyła ją oraz $E_{2}$ do strony udowadniającej - ta posiada teraz trzy izogenie: $τ$, $ψ$ oraz $φ$, wylicza kolejną $σ$ jako złożenie: $φ\\ ◦\\ ψ\\ ◦\\ τ: E_{A}\\rightarrow E_{2}$, wysyła ją do strony weryfikującej. Ta akceptuje żądanie uwierzytelnienia jeśli otrzymana izogenia  σ faktycznie prowadzi z $E_{A}$ w $E_{2}$ w przeciwnym wypadku odrzuca żądanie.\n",
+    "\n",
+    "![](images/sgi_sign.png)\n",
+    "\n",
+    "*schemat opisanego powyżej dowodu z wiedzą zerową - New algorithms for the Deuring correspondence: SQISign twice as fast Luca De Feo, Antonin Leroux and Benjamin Wesolowski*\n",
+    "\n",
+    ">**Bezpieczeństwo**\n",
+    "\n",
+    "Protokół SQISign oferuje bezpieczeństwo klasyczne na poziomie 128 bitów, oraz postkwantowe na poziomie pierwszej kategorii NIST. Rozmiary kluczy oraz podpisu są następujące - 16 bajtowy klucz prywatny, 64 bajtowy klucz publiczny oraz 204 bajtowy podpis. Na współczesnym komputerze przedstawiony algorytm generuje klucze w około pół sekundy, podpisuje dokument w nieco ponad 2 sekundy oraz weryfikuje podpis poniżej jednej dziesiątej sekundy.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
