--- a/sidh-bez-sage-dziala-odbugowany.ipynb
+++ b/sidh-bez-sage-dziala-odbugowany.ipynb
@@ -699,7 +699,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98f26e2dbefc15f9c7c4aac2af27595c9f0f9205c75ac8f856ece79a0df83888"
+   }
   }
  },
  "nbformat": 4,
